<package>
  <name>hector_qrcode_detection</name>
  <version>0.0.0</version>
  <description>
     hector_qrcode_detection searches for QR codes in images using the <a href="http://zbar.sourceforge.net/">zbar</a> library.
     The qrcode_detection node/nodelet publishes hector_worldmodel_msgs/ImagePercept messages and serves as
     an source of input for the <a href="http://ros.org/wiki/hector_object_tracker">hector_object_tracker</a>.
  </description>
  
  <maintainer email="bence.magyar@pal-robotics.com">Bence Magyar</maintainer>
  <author>Johannes Meyer</author>
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>hector_worldmodel_msgs</build_depend>
  <build_depend>zbar</build_depend>

  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>hector_worldmodel_msgs</run_depend>
  <run_depend>zbar</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet.xml" />
  </export>

</package>

